# fsqc

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.md  README.md  README.md.orig  SECURITY.md  __init__.py  adni-qc-table1.csv  available_segmentations.py  cc_size_checker.py  checkCCSize.py  checkContrast.py  checkFornix.py  checkRotation.py  checkSNR.py  checkTopology.py  contrast_checker.py  createScreenshots.py  evaluateFornixSegmentation.py  exportEV.py  exportVTK.py  exportVTKtetra.py  fs_brainPrint.py  fs_brainPrintPostproc.py  fs_pyshapeDNA.py  fs_shapeDNA.py  fsqc.py  holes_topo_checker.py  importMGH.py  importVTK.py  importVTKtetra.py  index.html  levelsetsTria.py  pyproject.toml  qatools  qatools.py  quality_checker.py  quality_checker.py.orig  (+8 more)
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml
Stats/: beispiel.Rmd  beispiel.html
cli/: __init__.py
dev/: .buildinfo  Authors.html  Changelog.html  Citations.html  Development.html  Functionality.html  Installation.html  License.html  Requirements.html  Usage.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: Authors.doctree  Changelog.doctree  Citations.doctree  Development.doctree  Functionality.doctree  Installation.doctree  License.doctree  Requirements.doctree  Usage.doctree  index.doctree
dev/.doctrees/api/: index.doctree
dev/_sources/: Changelog.rst.txt  Installation.rst.txt  License.rst.txt  Requirements.rst.txt
dev/api/: index.html
doc/: Authors.rst  Changelog.rst  Citations.rst  Development.rst  Functionality.rst  Requirements.rst  Usage.rst  conf.py  index.rst  links.inc  references.bib
doc/api/: index.rst
docker/: Docker.md  Dockerfile
eval-presentation/: age-illness-defects-scatter.html  oasis2-summary-boxplot.html
eval-presentation/boxplots/: CNR_graph.py  GM_SNR_graph.py  WM_SNR_graph.py  age-cnr-plot.html  age-gm-snr-norm-plot.html  create_graph.py
eval-presentation/scatterplots/metrics_age/: age-cc-size.html  age-gm-snr-norm-scatter.html  age-gm-snr-orig-scatter.html  age-holes-scatter.html  temp-plot.html
eval-presentation/scatterplots/metrics_illness/: age-illness-cnr-scatter.html  age-illness-wm-snr-norm-scatter.html  age_illness_holes.py
eval-presentation/scatterplots/metrics_sex/: age-sex-holes-scatter.html
eval-stats/: adni-qc-cont.R  first_draft.html  interaction_stats.Rmd  interaction_stats.html
eval-validation/adni/: adni_1.5T-quality_checker_v2.csv  adni_3T-quality_checker_v2.csv  failed_subjects_v2.csv  failed_subjects_v4.csv  quality-checker.csv
eval-validation/adni/boxplots/: GM_SNR.py  age-cc-size-plot.html  age-wm-snr-norm-plot.html  defects_graph.py  holes_graph.py  summary-plot.html
eval-validation/adni/scatterplots/metrics_age/: age-outliers-scatter-limits.html  age-wm-snr-orig-scatter.html  age_cc.py  age_defects_scatter.py
eval-validation/adni/scatterplots/metrics_illness/: age-illness-gm-snr-norm-scatter.html  age-illness-gm-snr-orig-scatter.html  age-illness-wm-snr-norm-scatter.html  age_illness_cnr.py  age_illness_wm_snr.py
eval-validation/adni/scatterplots/metrics_sex/: age_illness_sex_holes.py
eval-validation/adni/stats/: stats_illness_age.py
eval-validation/oasis2/: QC_v2.csv
fsqc/: __init__.py  checkCCSize.py  checkContrast.py  checkRotation.py  checkSNR.py  checkTopology.py  createScreenshots.py  createSurfacePlots.py  evaluateFornixSegmentation.py  evaluateHippocampalSegmentation.py  evaluateHypothalamicSegmentation.py  fsqc.py  fsqcMain.py  fsqcUtils.py  fsqc_cmd.py  outlierDetection.py
fsqc/cli/: __init__.py
fsqc/utils/: _config.py  _imports.py
misc/: adni-qc-cont.R  adni-qc-eval.Rmd
qatoolspython/: __init__.py  checkCCSize.py  checkContrast.py  checkRotation.py  checkSNR.py  checkTopology.py  createScreenshots.py  createSurfacePlots.py  draft_tests.py  evaluateFornixSegmentation.py  evaluateHippocampalSegmentation.py  evaluateHypothalamicSegmentation.py  levelsetsTria.py  outlierDetection.py  qatools.py  qatoolsMain.py  qatoolsUtils.py  qatools_cmd.py  qatoolspython.py  qatoolspythonUtils.py  temp.py
qc-presentation/: age-defects-boxplot.html
qc-presentation/boxplots/: holes_graph.py
qc-presentation/scatterplots/metrics_age/: age_holes_scatter.py
qc-presentation/scatterplots/metrics_illness/: age-illness-holes-scatter.html  age_illness_wm_snr.py
qc-presentation/scatterplots/metrics_sex/: age-sex-defects-scatter.html  age_illness_sex_cnr.py
qc-stats/: adni-qc-eval.html  first_draft.Rmd
qc-validation/adni/: adni-qc-table1.csv  defects.csv  failed_subjects.csv  failed_subjects_v3.csv
qc-validation/adni/boxplots/: age-holes-plot.html  cc_size_graph.py
qc-validation/adni/scatterplots/metrics_age/: age-cnr-scatter.html  age_cnr_scatter.py
qc-validation/adni/scatterplots/metrics_illness/: age-illness-holes-scatter-extended.html  age-illness-wm-snr-orig-scatter.html  age_illness_holes_extended.py
qc_validation/adni/scatterplots/metrics_age/: age-defects-scatter-limits.html  age-holes-scatter-limits.html  age-wm-snr-norm-scatter.html  age_holes_scatter.py  age_outliers_scatter.py  age_wm_snr_norm.py
scripts/: cc_size_checker.py  defects_checker.py  fs_brainPrintPostproc.py  g_parc_mean_norm.py  g_parc_val_norm.py  quality_checker.py  recon_all_aseg_outlier_checker.py  segsfile2  shape_checker.py  write_shape_to_file.py
scripts-unfinished/: Hough_transform.py
scripts-unused/: fore_back_energy_checker.py  get_relative_cc_size.py
scripts_brainprint/: README.md  fs_shapeDNA.py
scripts_quality_check/: README  contrast_control.py  create_graph.py  fs_brainPrint.py  holes_topo_checker.py  manual_check.py  quality_checker.py  read_parc_mean_from_table.py  recon_all_aseg_outlier_checker.py  shape_distances.py  summary-plot.html  wm_gm_anat_snr_checker.py  write_information_to_file.py
singularity/: Singularity.md
testing/: testing.py  testing.sh
(+3 files in other folders)
